[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foamgraph"
version = "0.2.1"
description = "Fast visualization library for interactive online analysis at scientific user facilities"
authors = [
    {name = "Jun Zhu", email="zhujun981661@gmail.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    'numpy>=1.21.5',
]
requires-python = ">=3.9"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[project.urls]
repository = "https://github.com/zhujun98/foamgraph"
